Implemented separated APIs of exams from api.js
