# resources/exams.js
@@ -1,21 +1,9 @@
-//NOT USED
-/*const express = require('express');
+const express = require('express');
 const router = express.Router();
 var fs = require("fs");
 
-var myData = {};
-readFile(async function (err, data) {
-    myData = JSON.parse(data);
-});
-
-var myDataSubmission = {};
-fs.readFile(__dirname + "/" + "database/submissions.json", "utf8", async function (err, data) {
-    myDataSubmission = JSON.parse(data);
-});
-
-function readFile(cb) {
-    fs.readFile(__dirname + "/" + "database/exams.json", "utf8", cb);
-}
+var myData = JSON.parse(fs.readFileSync(__dirname + "/" + "../database/exams.json", 'utf8'));
+var myDataSubmission = JSON.parse(fs.readFileSync(__dirname + "/" + "../database/submissions.json", 'utf8'));
 
 var exam4 = {
     "idExam": 4,
@@ -101,13 +89,13 @@ router.get('/exams/:id', function (req, res) {
     res.end(JSON.stringify(result));
 });
 
-router.put('/exams', function (req, res) {
-    const result = putExam();
+router.put('/exams/:id', function (req, res) {
+    const result = updateExam(req.params.id);
     res.end(JSON.stringify(myData));
 });
 
 router.post('/exams', function (req, res) {
-    const result = updateExam();
+    const result = putExam();
     res.end(JSON.stringify(myData));
 });
 
@@ -126,23 +114,41 @@ router.post('/submissions', function (req, res) {
 });
 
 function getExamsById(id) {
-    var Exam = {};
-    for (var x in myData) {
-        if (myData[x].idExam == id) {
-            Exam = myData[x];
-        }
+    if (isNaN(id)) {
+        return null;
     }
-    return(Exam);
+    else
+        if (id < 0) {
+            return null;
+        }
+        else {
+            var Exam = {};
+            for (var x in myData) {
+                if (myData[x].idExam == id) {
+                    Exam = myData[x];
+                }
+            }
+            return (Exam);
+        }
 }
 
 function getExamsByUserId(idUser) {
-    var Exam = [];
-    for (var x in myData) {
-        if (myData[x].idUser == idUser) {
-            Exam.push(myData[x]);
-        }
+    if (isNaN(idUser)) {
+        return null;
     }
-    return(Exam);
+    else
+        if (idUser < 0) {
+            return null;
+        }
+        else {
+            var Exam = [];
+            for (var x in myData) {
+                if (myData[x].idUser == idUser) {
+                    Exam.push(myData[x]);
+                }
+            }
+            return (Exam);
+        }
 }
 
 function putExam() {
@@ -150,22 +156,40 @@ function putExam() {
     return true;
 }
 
-function updateExam() {
-    for (var x in myData) {
-        if (myData[x].idExam == 2) {
-            myData[x] = exam2;
-        }
+function updateExam(id) {
+    if (isNaN(id)) {
+        return null;
     }
-    return(true);
+    else
+        if (id < 0) {
+            return null;
+        }
+        else {
+            for (var x in myData) {
+                if (myData[x].idExam == id) {
+                    myData[x] = exam2;
+                }
+            }
+            return (true);
+        }
 }
 
 function deleteExam(id) {
-    for (var x in myData) {
-        if (myData[x].idExam == id) {
-            delete myData[x];
-        }
+    if (isNaN(id)) {
+        return null;
     }
-    return(true);
+    else
+        if (id < 0) {
+            return null;
+        }
+        else {
+            for (var x in myData) {
+                if (myData[x].idExam == id) {
+                    myData.splice(x, 1);
+                }
+            }
+            return (true);
+        }
 }
 
 function submission() {
@@ -173,5 +197,10 @@ function submission() {
     return true;
 }
 
+router.examId = getExamsById;
+router.userId = getExamsByUserId;
+router.examPut = putExam;
+router.examUpdate = updateExam;
+router.examDelete = deleteExam;
+router.submit = submission;
 module.exports = router;
-*/
